# VGBoy

./: CMakeLists.txt  LICENSE  Makefile  README.md  main.c  project.yml  run_test.sh
common/: CMakeLists.txt  audio_playback_samples.h  color.h  status_code.h
common/callback/: callback.c  callback.h
common/ring_buf/: ring_buf.c  ring_buf.h
core/: CMakeLists.txt
core/include/: apu.h  apu_common.h  apu_lfsr.h  apu_pwm.h  apu_wave.h  bus_interface.h  cpu.h  data_bus.h  debug_serial.h  dma.h  emulator.h  interrupt.h  io.h  joypad.h  lcd.h  logging.h  mbc.h  memory.h  oam.h  pixel_fetcher.h  pixel_fifo.h  ppu.h  ram.h  rom.h  rtc.h  status_code.h  sys_def.h  timer.h  timing_sync.h
core/src/: apu.c  apu_lfsr.c  apu_pwm.c  apu_wave.c  bus_interface.c  cpu.c  data_bus.c  debug_serial.c  dma.c  emulator.c  interrupt.c  io.c  joypad.c  lcd.c  mbc.c  memory.c  oam.c  pixel_fetcher.c  pixel_fifo.c  ppu.c  ram.c  rom.c  rtc.c  timer.c  timing_sync.c
lib/: CMakeLists.txt
lib/include/: audio.h  display.h  file_manager.h  fps_sync.h  key_input.h  main_window.h  save_state.h  snapshot.h  tile_debug_window.h  window_manager.h
lib/src/: audio.c  display.c  file_manager.c  fps_sync.c  key_input.c  main_window.c  save_state.c  snapshot.c  tile_debug_window.c  window_manager.c
test/: test_bus_interface.c  test_cpu.c  test_cpu_ctrl_ops.c  test_cpu_ld_16_ops.c  test_dma.c  test_regs.c  test_ring_buf.c
test/apu_tests/: test_apu_init.c  test_apu_length_counter.c  test_apu_registers.c
test/bus_interface_tests/: test_bus_interface_init.c  test_bus_interface_read.c  (+1 more)
(+31 files in other folders)
